fix(gallery): add horizontal overflow to gallery section for improved responsiveness

--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 /*
 Theme Name: Oyster Farm
 Description: Современная тема для компании гастроэкскурсий на устричную ферму
-Version: 3.29.5
+Version: 3.29.6
 Author: Mr Vi
 Author URI: https://t.me/b4dcat
 Theme URI: https://github.com/mrvi0/oyster-farm
@@ -895,6 +895,7 @@ section,
     grid-template-columns: 1fr;
     grid-auto-rows: 180px;
     max-height: 400px;
+    overflow-x: auto;
   }
   .gallery-thumb, .gallery-scroll a { width: 180px; height: 100%; }
 }
